# task-manager-app-backend

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  dump.rdb  middleware.py  pyproject.toml  utils.py
config/: celery.py  choices.py  openai_client.py  settings.py  urls.py  views.py
task_board/: admin.py  apps.py  choices.py  documentation.py  mixins.py  models.py  pagination.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
task_board/management/commands/: backfill_daily_task_stats.py
task_board/migrations/: 0001_initial.py  0002_remove_taskboard_icon.py  0002_task_task_board.py  0003_alter_task_options_alter_taskboard_options_and_more.py  0003_task_postponed_to_alter_task_status.py  0004_alter_task_task_board.py  0004_dailytaskstats_user.py  0005_alter_dailytaskstats_unique_together.py  0005_taskboard_created_by.py  0006_alter_task_description_alter_taskboard_description.py
templates/: password_reset_email.html
user/: admin.py  documentation.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
user/migrations/: 0001_initial.py  0002_user_profile_picture.py  0003_remove_user_first_name_remove_user_last_name_and_more.py  0004_alter_user_nickname.py
