[tool.poetry]
name = "Task Manager App"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | migrations
  | manage\.py
)/
'''

[tool.isort]
profile = "black"
