[tool.poetry]
name = "Task Manager App"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.0.6"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "^5.3.1"
pillow = "9.5.0"
django-debug-toolbar = "3.2.4"

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | migrations
  | manage\.py
)/
'''

[tool.isort]
profile = "black"
